--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "validator": "^13.12.0"
   },
